# ninjaclips

./: .gitignore  CLAUDE.md  pyproject.toml  urls.txt
ninjaclips/: __init__.py  cli.py  clip.py  download.py  source_resolver.py  video_tools.py  wnl_bridge.py
tests/: test_clip.py  test_source_resolver.py  test_video_tools.py  test_wnl_bridge.py
